force-app/main/default/objects/Expert_Review__c/Expert_Review__c.object-meta.xml
<CustomObject>
    <label>Expert Review</label>
    <nameField>
        <label>Expert Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expert Reviewers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>