force-app/main/default/objects/Expert_Review__c/fields/Assignments__c.field-meta.xml
<CustomField>
    <fullName>Assignments__c</fullName>
    <label>Assignments</label>
    <type>TextArea</type>
</CustomField>