force-app/main/default/objects/Expert_Review__c/fields/Cactus_Email_Alert__c.field-meta.xml
<CustomField>
    <fullName>Cactus_Email_Alert__c</fullName>
    <label>Cactus Email Alert</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>