force-app/main/default/objects/Expert_Review__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Expert Reviewers</relationshipLabel>
    <relationshipName>Expert_Reviewers</relationshipName>
    <type>Lookup</type>
</CustomField>