force-app/main/default/objects/Expert_Review__c/fields/Contact_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Cell_Phone__c</fullName>
    <label>Contact Cell Phone</label>
    <type>Phone</type>
</CustomField>