force-app/main/default/objects/Expert_Review__c/fields/Departments__c.field-meta.xml
<CustomField>
    <fullName>Departments__c</fullName>
    <label>Assignments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>