force-app/main/default/objects/Expert_Review__c/fields/DisplayStatus__c.field-meta.xml
<CustomField>
    <fullName>DisplayStatus__c</fullName>
    <formula>CASE( Status__c , 
&quot;&lt;00000000J&quot;, &quot;Permanent&quot;, 
&quot;&lt;00000000K&quot;, &quot;Provisional&quot;,
&quot;_REI0PVQMX&quot;,&quot;Active&quot;,
&quot;&quot;)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>