force-app/main/default/objects/Expert_Review__c/fields/Expert_Address__c.field-meta.xml
<CustomField>
    <fullName>Expert_Address__c</fullName>
    <formula>IF( ISBLANK( Address_Line_1__c ) ,&apos;&apos; ,Address_Line_1__c  ) + &apos; &apos;+
IF( ISBLANK( Address_Line_2__c ) ,&apos;&apos; ,Address_Line_2__c  )+&apos; &apos;+
IF( ISBLANK(  City__c  ) ,&apos;&apos; ,City__c  ) +&apos; &apos;+
IF( ISBLANK(   State__c   ) ,&apos;&apos; ,State__c  ) +&apos; &apos; +
IF( ISBLANK(     ZipCode__c   ) ,&apos;&apos; ,ZipCode__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expert Address</label>
    <type>Text</type>
</CustomField>