force-app/main/default/objects/Expert_Review__c/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <label>Expertise</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>