force-app/main/default/objects/Expert_Review__c/fields/License_Issued_State__c.field-meta.xml
<CustomField>
    <fullName>License_Issued_State__c</fullName>
    <label>License Issued State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>