force-app/main/default/objects/Expert_Review__c/fields/MD_Status__c.field-meta.xml
<CustomField>
    <fullName>MD_Status__c</fullName>
    <label>MD Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>