force-app/main/default/objects/Expert_Review__c/fields/MDID__c.field-meta.xml
<CustomField>
    <fullName>MDID__c</fullName>
    <label>MDID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>