force-app/main/default/objects/Expert_Review__c/fields/Number_of_assigned_cases__c.field-meta.xml
<CustomField>
    <fullName>Number_of_assigned_cases__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of assigned cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>