force-app/main/default/objects/Expert_Review__c/fields/Org_Type__c.field-meta.xml
<CustomField>
    <fullName>Org_Type__c</fullName>
    <label>Org Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
                <default>true</default>
                <label>NONE</label>
            </value>
            <value>
                <fullName>External Panel</fullName>
            </value>
            <value>
                <fullName>Legacy Panel</fullName>
            </value>
            <value>
                <fullName>Nexus-Delegated</fullName>
            </value>
            <value>
                <fullName>MFS Employee</fullName>
            </value>
            <value>
                <fullName>Medscribe</fullName>
            </value>
            <value>
                <fullName>WeCare</fullName>
            </value>
            <value>
                <fullName>MFS Remote T</fullName>
            </value>
            <value>
                <fullName>MFS Remote 7</fullName>
            </value>
            <value>
                <fullName>MFS Remote 1</fullName>
            </value>
            <value>
                <fullName>MFS Remote 2</fullName>
            </value>
            <value>
                <fullName>MFS Remote 6</fullName>
            </value>
            <value>
                <fullName>MFS Remote 9</fullName>
            </value>
            <value>
                <fullName>MFS Remote 8</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>