force-app/main/default/objects/Expert_Review__c/fields/OrgType__c.field-meta.xml
<CustomField>
    <fullName>OrgType__c</fullName>
    <label>Organization Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>