force-app/main/default/objects/Expert_Review__c/fields/Provider_k__c.field-meta.xml
<CustomField>
    <fullName>Provider_k__c</fullName>
    <label>Provider_k</label>
    <length>25</length>
    <type>Text</type>
</CustomField>