force-app/main/default/objects/Expert_Review__c/fields/Specialities__c.field-meta.xml
<CustomField>
    <fullName>Specialities__c</fullName>
    <label>Specialities</label>
    <type>TextArea</type>
</CustomField>