force-app/main/default/objects/Expert_Review__c/fields/Specialty_Description__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Description__c</fullName>
    <label>Specialty Description</label>
    <type>TextArea</type>
</CustomField>