force-app/main/default/objects/Expert_Review__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>