force-app/main/default/objects/Expert_Review__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <label>MERA Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>