force-app/main/default/objects/Expert_Review__c/fields/Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>Vendor_ID__c</fullName>
    <label>Vendor ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>