force-app/main/default/objects/Expert_Review__c/fields/Vendor_Long_Names__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Long_Names__c</fullName>
    <formula>Last_Name__c +&quot;,&quot; +&quot; &quot; + First_Name__c +&quot; &quot;+ Middle_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Long Name</label>
    <type>Text</type>
</CustomField>