force-app/main/default/objects/Expert_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MDID__c</columns>
    <columns>DisplayStatus__c</columns>
    <columns>Departments__c</columns>
    <columns>Specialty_Description__c</columns>
    <columns>Rating__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>